<!--
  ~ Copyright (C) 2016 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!--
  ~ Copyright (C) 2016 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="version" translatable="false">v1.6.4 (23)</string>

    <string name="TITLE_XDA_THREAD">XDA Thread</string>
    <string name="TITLE_VISIT_AR">Visit AfterROOT</string>
    <string name="TITLE_VISIT_G_PLUS">G+ Community</string>

    <string name="key_pointerSize" translatable="false">POINTER_SIZE</string>
    <string name="key_pointerPadding" translatable="false">pointer_padding</string>
    <string name="key_pointerPath" translatable="false">POINTER_PATH</string>
    <string name="key_pointersVersion" translatable="false">POINTERS_VERSION</string>
    <string name="key_oldColor" translatable="false">OLD_COLOR</string>
    <string name="key_useMDCC" translatable="false">use_md_cc</string>
    <string name="key_maxPointerSize" translatable="false">maxPointerSize</string>
    <string name="key_selectedPointerPath" translatable="false">SELECTED_POINTER_PATH</string>
    <string name="key_app_info" translatable="false">key_app_info</string>
    <string name="key_EnablePointerAlpha" translatable="false">keyEnablePointerAlpha</string>
    <string name="key_maxPaddingSize" translatable="false">maxPaddingSize</string>

    <!-- urls -->
    <string name="url_xda_thread" translatable="false">http://goo.gl/mpj4S8</string>
    <string name="url_ar" translatable="false">http://goo.gl/7wV9LR</string>
    <string name="url_prx" translatable="false">http://repo.xposed.info/module/afterroot.pointerreplacer</string>
    <string name="url_g_plus" translatable="false">http://goo.gl/r8A681</string>
    <string name="url_source_code" translatable="false">http://goo.gl/7jipGN</string>

    <!--changelog dialog-->
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">Full Changelog</string>


    <string name="app_name">Pointer Replacer</string>
    <string name="title_activity_pointer_preview">Pointer Preview</string>
    <string name="title_activity_update">Update PR</string>
    <string name="title_activity_new_pointer">New Pointer</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settigs">Settings</string>
    <string name="title_activity_manage_pointer">Install/Manage Pointers</string>

    <string name="xmodule_description">Simple Module To Replace Touch Pointer. by sandipv22@xda.</string>

    <string name="text_changelog">Changelog</string>
    <string name="text_xda_thread">XDA Thread</string>
    <string name="text_will_change_to">NEW POINTER</string>
    <string name="text_change_color">Change Pointer Color</string>
    <string name="text_cur_pointer">CURRENT POINTER</string>
    <string name="text_module_info">Module Info</string>
    <string name="text_max_pointer_size">Max Pointer Size</string>
    <string name="text_already_latest">You already have latest version. Click to Re-Download</string>
    <string name="change_background_color">Change Background Color</string>
    <string name="change_pointer_color">Change Pointer Color</string>
    <string name="reset_pointer_color">Reset Pointer Color</string>
    <string name="tap_and_move_your_finger_to_see_preview">Tap and move your finger to see preview</string>
    <string name="text_current_version">Current Version</string>
    <string name="text_new_version">Latest Version</string>
    <string name="text_whats_new">What\'s New</string>
    <string name="text_update_now">Update Now</string>
    <string name="text_no_connection">No Connection</string>
    <string name="text_retry">Retry</string>
    <string name="text_source_code">Source Code</string>
    <string name="change_pointer">Change Pointer</string>
    <string name="import_pointer">Import Pointer</string>
    <string name="text_max_padding_size">Max Padding Size</string>
    <string name="text_padding">Padding</string>
    <string name="text_pointers_copied">"Pointers Copied to "</string>
    <string name="text_new">"New "</string>
    <string name="text_choose_pointer">Choose Pointer</string>
    <string name="text_delete">"Delete "</string>
    <string name="text_delete_confirm">Are you sure you want to delete this pointer??</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_alpha">Alpha</string>
    <string name="text_size">Size</string>
    <string name="text_color_not_changed">Pointer color not changed.</string>
    <string name="text_color_changed">Pointer color changed.</string>
    <string name="text_reboot_confirm">Do you want to Reboot?</string>
    <string name="text_soft_reboot">Soft Reboot</string>
    <string name="text_copy_confirm_1">Do you want to copy pointers to\n</string>
    <string name="text_copy_confirm_2">Do only if pointers are not copied automatically.</string>
    <string name="text_apply_pointer_confirm">Do you want to apply this pointer?</string>
    <string name="text_pointer_applied">"Pointer Applied "</string>
    <string name="text_pointer_exists">Pointer already exists!</string>
    <string name="text_selected_pointer">Selected</string>
    <string name="text_color_changed_default">Color changed to Default</string>

    <string name="reset_size">Reset Size &amp; Padding</string>
    <string name="apply_pointer">Apply Pointer</string>
    <string name="pointer_settings">Pointer Settings</string>
    <string name="copy_pointers">Copy Pointers</string>
    <string name="reboot">Reboot</string>
    <string name="pointerFolderName" translatable="false">/Pointer Replacer/Pointers/</string>
    <string name="choose_pointer_color">Choose Pointer Color</string>
    <string name="choose_color_picker">Choose Color Picker</string>
    <string name="choose_back_color">Choose Background Color</string>

    <array name="CCItems">
        <item>HSV Color Picker</item>
        <item>Material Color Picker</item>
    </array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_not_installed">Not Installed</string>
    <string name="text_installed">Installed</string>
</resources>
