<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016-2017 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="@string/key_app_info"
        android:summary="by sandipv22@xda. Tap to check for update."
        android:icon="@mipmap/ic_launcher"/>
    <Preference
        android:title="Licenses"
        android:key="licenses"
        android:summary="Click to view licenses of third party libraries"/>
    <PreferenceCategory android:title="Links">
        <Preference
            android:title="@string/TITLE_XDA_THREAD">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_xda_thread"/>
        </Preference>
        <Preference
            android:title="@string/TITLE_VISIT_G_PLUS">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_g_plus"/>
        </Preference>
        <Preference
            android:title="@string/text_source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_source_code"/>
        </Preference>
        <Preference
            android:title="@string/TITLE_VISIT_AR">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_ar"/>
        </Preference>
        <Preference
            android:title="@string/text_module_info">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_prx"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>