<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Sandip Vaghela (AfterROOT)
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="afterroot.pointerreplacer.UpdateActivity"
    tools:showIn="@layout/activity_update"
    android:id="@+id/main_layoutUpdate"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView_update">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textCurrentVersion"
                android:text="@string/text_current_version"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textNewVersion"
                android:text="@string/text_new_version"
                android:layout_below="@+id/textCurrentVersion"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_whats_new"
                android:textSize="20sp"
                android:id="@+id/textWhatsNew"
                android:layout_below="@+id/textNewVersion"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textNewChangelog"
                android:layout_below="@+id/textWhatsNew"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonUpdate"
                android:text="@string/text_update_now"
                android:layout_below="@+id/textNewChangelog"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"

                android:textColor="@android:color/white"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/layoutNoConnection">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_no_connection"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRetry"
            android:text="@string/text_retry"
            android:fontFamily="sans-serif-light"
            android:enabled="true"
            android:textColor="@android:color/white"
            android:onClick="retry"/>
    </LinearLayout>

</RelativeLayout>